2024-11-20 pz v10.80

1) Station delay corrections may differ for P-waves and S-waves.
2) In the input hyp file tolerate naming of seismic phases
   as Pg, Sg, Lg, ...
3) If the xyz coordinates of the hypocenter are given, solve
   the forward problem even if the number of arrivals is less than 3.
4) Shorten the list of variables in common blocks
   /otime/, /origin/, /rec/, /hyp/, /it1/
========================================================================

2024-04-22 pz v10.79

Allow the input of two velocity models for v_p and v_s.
The method of raytracing is controlled by the keyword '--split_ray'. 
read_model.f, i_hyp_mod.f - read velocity model 
td_all.f - swapping velocity models acording arrival phase
========================================================================
2020-10-26 pz v10.78

Revision focused on the application of station delay corrections.
1) Add the station delay to the predicted time at only one place
in the td_all.f.
2) Print tcal also including station delay to output hy3.
3) Remove the surf_ev switch that controls whether station delays are
used depending on the depth of the hypocenter (nonsense).
========================================================================
2020-02-15 pz v10.77

Compensate the weights normalized with avwt in the covariance matrix
calculation.
In the case of coordinate fixation, calculate the standard deviation
estimate with four degrees of freedom.
========================================================================
2019-06-10 pz v10.76

After modifying the geotool-hypo3d interface (geotool plugin Hypo3D.c)
it is possible to continue editing the hypo3d program.
Extend the station code to five characters to meet the SEED convention.
In the hyp input file format and in the hy3 output file format,
add one column (space) as the delimiter between station name and phase.
========================================================================
2019-06-06 pz v10.75
