@@ -147,8 +147,7 @@ c
          logical             hyr
          real                trec(nrec_max)
          real                wt(nrec_max)
-         real                avwt,sumw,sumw2
-         common /hyp/        hyr,trec,wt,avwt,sumw,sumw2
+         common /hyp/        hyr,trec,wt
 c
          character*5         rec_name(nrec_max)
          common /chhyp/      rec_name
