@@ -85,9 +85,7 @@ c
 c
          logical             hyr
          real                trec(nrec_max)  !observed times
-         real                wt(nrec_max)    !weight
-         real                avwt,sumw,sumw2 !average weight
-         common /hyp/        hyr,trec,wt,avwt,sumw,sumw2
+         common /hyp/        hyr,trec
 c
 c  *******************
 c  end of declarations
